# Google-News-Feed

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pip-publish.yml
src/: GNR.py
src/google_news_feed/: __init__.py
tests/: test_GoogleNewsFeed.py
