[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google_news_feed"
version = "1.1.0"
authors = [
  { name="Lukas Kreussel"},
]
description = "A simple python library to consume the google news rss feed"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=["aiohttp>=3.8.4","dateparser>=1.1.1","lxml>=4.9.0","requests>=2.31.0","beautifulsoup4>=4.12.2"]

[project.urls]
"Homepage" = "https://github.com/LLukas22/Google-News-RSS"
"Bug Tracker" = "https://github.com/LLukas22/Google-News-RSS/issues"